Restructure and add tests

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URI="sqlite:////home/david/dev/python/fastapi/data/chinook.db"
+DATABASE_URI="sqlite:////code/app/database/chinook.db"
+# sqlite:////home/david/dev/python/fastapi/app/database/chinook.db
