--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "args": [
                 "main:api",
                 "--app-dir",
-                "src",
+                "app",
                 "--reload",
                 "--port",
                 "8001"
